<resources>
    <string name="app_name">GRADLE_CadavreExquis</string>
    <string name="app_title">The Game of "CadavreExquis"</string>
    <string name="app_welcome">Welcome !</string>
    <string name="app_loginscreen_title">Login Screen</string>
    <string name="app_login">Login</string>
    <string name="app_password">Password</string>
    <string name="app_dummylogin">Player</string>
    <string name="app_dummypassword">Hunter2</string>
    <string name="app_log_in">Log In</string>
    <string name="app_sign_in">Sign In</string>
    <string name="app_validate">Confirm</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_newsentencescreen_title">New Sentence</string>
    <string name="app_previously">Previously</string>
    <string name="app_newstory">New Story</string>
    <string name="app_storytitle">Story Title</string>
    <string name="app_writeyoursentence">Write your sentence here ...</string>
    <string name="app_newstorytodo">Lucky you ! you\'re starting a brand new story ! Don\'t forget to modify the default title !</string>
    <string name="app_inputnewtitle">Give this new story a cool title !</string>
    <string name="app_comments">Comments</string>
</resources>
