<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_loginscreen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_loginscreen_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtinput_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/app_dummylogin" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/app_dummypassword" />

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_log_in" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_cancel" />

</LinearLayout>